; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/wimax/extr_op-rfkill.c_wimax_rfkill_set_radio_block.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/wimax/extr_op-rfkill.c_wimax_rfkill_set_radio_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wimax_dev = type { i64, i32 }
%struct.device = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"(wimax_dev %p blocked %u)\0A\00", align 1
@WIMAX_RF_ON = common dso_local global i32 0, align 4
@WIMAX_RF_OFF = common dso_local global i32 0, align 4
@__WIMAX_ST_QUIESCING = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [32 x i8] c"(wimax_dev %p blocked %u) = %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @wimax_rfkill_set_radio_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wimax_rfkill_set_radio_block(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.wimax_dev*, align 8
  %7 = alloca %struct.device*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.wimax_dev*
  store %struct.wimax_dev* %10, %struct.wimax_dev** %6, align 8
  %11 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %12 = call %struct.device* @wimax_dev_to_dev(%struct.wimax_dev* %11)
  store %struct.device* %12, %struct.device** %7, align 8
  %13 = load %struct.device*, %struct.device** %7, align 8
  %14 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @d_fnstart(i32 3, %struct.device* %13, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), %struct.wimax_dev* %14, i32 %15)
  %17 = load i32, i32* @WIMAX_RF_ON, align 4
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @WIMAX_RF_OFF, align 4
  store i32 %21, i32* %8, align 4
  br label %22

22:                                               ; preds = %20, %2
  %23 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %24 = getelementptr inbounds %struct.wimax_dev, %struct.wimax_dev* %23, i32 0, i32 1
  %25 = call i32 @mutex_lock(i32* %24)
  %26 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %27 = getelementptr inbounds %struct.wimax_dev, %struct.wimax_dev* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @__WIMAX_ST_QUIESCING, align 8
  %30 = icmp sle i64 %28, %29
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  store i32 0, i32* %5, align 4
  br label %36

32:                                               ; preds = %22
  %33 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %34 = load i32, i32* %8, align 4
  %35 = call i32 @__wimax_rf_toggle_radio(%struct.wimax_dev* %33, i32 %34)
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %32, %31
  %37 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %38 = getelementptr inbounds %struct.wimax_dev, %struct.wimax_dev* %37, i32 0, i32 1
  %39 = call i32 @mutex_unlock(i32* %38)
  %40 = load %struct.device*, %struct.device** %7, align 8
  %41 = load %struct.wimax_dev*, %struct.wimax_dev** %6, align 8
  %42 = load i32, i32* %4, align 4
  %43 = load i32, i32* %5, align 4
  %44 = call i32 @d_fnend(i32 3, %struct.device* %40, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), %struct.wimax_dev* %41, i32 %42, i32 %43)
  %45 = load i32, i32* %5, align 4
  ret i32 %45
}

declare dso_local %struct.device* @wimax_dev_to_dev(%struct.wimax_dev*) #1

declare dso_local i32 @d_fnstart(i32, %struct.device*, i8*, %struct.wimax_dev*, i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @__wimax_rf_toggle_radio(%struct.wimax_dev*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @d_fnend(i32, %struct.device*, i8*, %struct.wimax_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
